--- a/src/styles.css
+++ b/src/styles.css
@@ -23,4 +23,12 @@
   border: solid black 1px;
   width: 30px;
   height: 30px;
+
+  color: black;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 24px;
 }
