--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,34 @@
   display: flex;
 }
 
+.header {
+  display: flex;
+  padding-left: 70px;
+  align-items: flex-end;
+  gap: 95px;
+  margin-bottom: -20px;
+}
+
+.letterLabel {
+  width: 300px;
+  height: 30px;
+
+  display: grid;
+  grid-template-rows: 30px;
+  grid-template-columns: repeat(10, 1fr);
+}
+
+.numberLabel {
+  width: 30px;
+  height: 300px;
+  margin: 25px;
+  margin-right: -10px;
+
+  display: grid;
+  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: 30px;
+}
+
 .board {
   width: 300px;
   height: 300px;
@@ -17,6 +45,12 @@
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
+}
+
+.label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .tile {
